--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.109.0"
 uvicorn = "^0.25.0"
-pydantic = "^2.5.3"
+pydantic = {extras = ["email"], version = "^2.6.4"}
 pydantic-settings = "^2.1.0"
 alembic = "^1.13.1"
 sqlalchemy = "^2.0.0"
