--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ psycopg2-binary = "^2.9.9"
 passlib = "^1.7.4"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 bcrypt = "^4.1.2"
+python-multipart = "^0.0.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
