--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,9 @@ passlib = "^1.7.4"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 bcrypt = "^4.1.2"
 python-multipart = "^0.0.9"
+httpx = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.1.1"
 mypy = "^1.9.0"
 ruff = "^0.3.3"
 
